tests/language/syntax/errors/unexpected-token.zena
// @target: statement
let x = ; // @error: Unexpected token
